k8s/base/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adla-worker
  labels:
    app.kubernetes.io/name: adla-worker
    app.kubernetes.io/component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: adla-worker
      app.kubernetes.io/component: worker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adla-worker
        app.kubernetes.io/component: worker
    spec:
      serviceAccountName: default
      containers:
        - name: worker
          image: regisry.azurecr.io/adla-app:latest
          resources:
            requests:
              cpu: 128m
              memory: 256Mi
            limits:
              cpu: 256m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            periodSeconds: 30
            failureThreshold: 3
