k8s/base/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: adla-app
  labels:
    app.kubernetes.io/name: adla-app
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: adla-app
    app.kubernetes.io/component: web
